fix: fixed nav menu stylization on mobile devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -73,6 +73,8 @@ header .btnContainer button i {
 .navigation nav {
     display: flex;
     gap: var(--gap-small);
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .navBtn {
